test/langtools/tools/javac/SuperInit/SuperInitFails.out
SuperInitFails.java:59:9: compiler.err.cant.ref.before.ctor.called: hashCode()
SuperInitFails.java:64:13: compiler.err.cant.ref.before.ctor.called: hashCode()
SuperInitFails.java:69:14: compiler.err.cant.ref.before.ctor.called: hashCode()
SuperInitFails.java:74:28: compiler.err.cant.ref.before.ctor.called: hashCode()
SuperInitFails.java:79:29: compiler.err.cant.ref.before.ctor.called: hashCode()
SuperInitFails.java:101:33: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:106:14: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:110:20: compiler.err.not.encl.class: java.lang.Object
SuperInitFails.java:114:23: compiler.err.cant.ref.before.ctor.called: spliterator()
SuperInitFails.java:121:22: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:127:9: compiler.err.cant.ref.before.ctor.called: SuperInitFails
SuperInitFails.java:135:9: compiler.err.non.canonical.constructor.invoke.another.constructor: SuperInitFails.Record1
SuperInitFails.java:140:9: compiler.err.non.canonical.constructor.invoke.another.constructor: SuperInitFails.Record2
SuperInitFails.java:157:50: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:161:15: compiler.err.cant.ref.before.ctor.called: SuperInitFails
SuperInitFails.java:170:13: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:174:17: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:178:24: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:182:18: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:188:32: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:208:25: compiler.err.return.before.superclass.initialized
SuperInitFails.java:213:33: compiler.err.ctor.calls.not.allowed.here
SuperInitFails.java:218:29: compiler.err.redundant.superclass.init
SuperInitFails.java:231:41: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:232:16: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:241:35: compiler.err.cant.ref.before.ctor.called: this
SuperInitFails.java:253:13: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:266:18: compiler.err.cant.ref.before.ctor.called: x
SuperInitFails.java:282:50: compiler.err.cant.ref.before.ctor.called: check
SuperInitFails.java:283:39: compiler.err.cant.ref.before.ctor.called: check
SuperInitFails.java:293:25: compiler.err.cant.ref.before.ctor.called: testMethod()
SuperInitFails.java:305:26: compiler.err.not.encl.class: SuperInitFails.Inner11.Inner11_1
SuperInitFails.java:315:37: compiler.err.cant.ref.before.ctor.called: check
SuperInitFails.java:35:13: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:39:14: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:43:14: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:47:13: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:51:33: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:55:32: compiler.err.call.must.only.appear.in.ctor
SuperInitFails.java:85:18: compiler.err.ctor.calls.not.allowed.here
SuperInitFails.java:91:13: compiler.err.return.before.superclass.initialized
SuperInitFails.java:152:18: compiler.err.call.must.only.appear.in.ctor
42 errors
